--- a/researcher/templates/researcher/layouts/add_new_technique.html
+++ b/researcher/templates/researcher/layouts/add_new_technique.html
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <label for="technique-name">نام تکنیک</label>
-                        <input id="technique-name" name="technique" value="" class="w-100">
+                        <input type="text" id="technique-name" name="technique" value="" class="w-100">
                         <button class="select-technique" type="button">
                             <i class="fas fa-plus"></i>
                         </button>
