--- a/researcher/templates/researcher/layouts/waiting_for_question.html
+++ b/researcher/templates/researcher/layouts/waiting_for_question.html
@@ -35,9 +35,9 @@
                         <path d="M475.93,297.21a7.12,7.12,0,1,1,7.12-7.11A7.12,7.12,0,0,1,475.93,297.21Zm0-13a5.93,5.93,0,1,0,5.93,5.93A5.94,5.94,0,0,0,475.93,284.17Z"
                               style="fill:#fff"/>
                         <path d="M426,1010.4H72.76V464.9h386V977.6A32.8,32.8,0,0,1,426,1010.4Z"
-                              style="fill:#2e4661;opacity:0.07"/>
+                              style="fill:#2e4661;opacity:0.07"></path>
                         <path d="M397,995.15H28.9V423.63H444.83V947.36A47.79,47.79,0,0,1,397,995.15Z"
-                              style="fill:#c8d6a1"/>
+                              style="fill:#c8d6a1"></path>
                         <rect x="73.05" y="469.27" width="336.7" height="212.92" style="fill:#fff"/>
                         <path d="M286.34,543.11c1.4,2.82,3.81,5.23,8.39,6.93,8.53,3.19,20,.89,24.9-6.25,8.22-11.93,5.91-29,14.75-41.41a29,29,0,0,1,15.51-10.95,26.53,26.53,0,0,1,19.59,1.86c9.35,5.15,12.58,15.79,12.67,25.45.18,18.54-2.42,37.72-5.76,56-1.61,8.86-4.1,18-10.52,25-8.71,9.49-23,13.45-36.75,15.56-34.69,5.34-70.26,2.08-105.28-1.21l-84.51-7.92c-7.94-.74-31.32.46-36.07-5s-1-23.58,1.72-29.2c6-12.51,22.58-19.58,38.1-18.78,35,1.79,21.17-34.77,32.37-52.13,6-9.22,19.07-15.85,30.36-12,10.77,3.67,15.26,14.48,20.57,23.45,2.75,4.65,6.67,9.48,12.56,10.49,10,1.71,18.36-8.47,28.55-8.08,6,.24,11.18,4.31,13.78,9.07C284.82,530.39,283.58,537.54,286.34,543.11Z"
                               style="fill:#d1e7f5"/>
@@ -55,15 +55,15 @@
                               style="fill:#fff"/>
                         <rect x="34.42" y="220.73" width="163.75" height="6.82" style="fill:#9ea6ad"/>
                         <rect x="34.42" y="272.75" width="195.3" height="6.82" style="fill:#9ea6ad"/>
-                        <rect x="34.42" y="324.78" width="195.3" height="6.82" style="fill:#9ea6ad"/>
+                        <rect x="34.42" y="324.78" width="195.3" height="6.82" style="fill:#9ea6ad"></rect>
                         <path d="M435.74,252.74h-195V114.53H423.34l39.1,41.3V224.2C462.44,240,450.49,252.74,435.74,252.74Z"
-                              style="fill:#3ababa"/>
-                        <polygon points="462.29 156.16 423.04 157.15 423.04 114.53 462.29 156.16" style="fill:#ffd559"/>
-                        <rect x="294.23" y="150.4" width="124.39" height="5.92" style="fill:#fff"/>
-                        <rect x="274.53" y="179.03" width="144.09" height="5.92" style="fill:#fff"/>
-                        <rect x="274.53" y="207.66" width="144.09" height="5.92" style="fill:#fff"/>
+                              style="fill:#3ababa"></path>
+                        <polygon points="462.29 156.16 423.04 157.15 423.04 114.53 462.29 156.16" style="fill:#ffd559"></polygon>
+                        <rect x="294.23" y="150.4" width="124.39" height="5.92" style="fill:#fff"></rect>
+                        <rect x="274.53" y="179.03" width="144.09" height="5.92" style="fill:#fff"></rect>
+                        <rect x="274.53" y="207.66" width="144.09" height="5.92" style="fill:#fff"></rect>
                         <path d="M828.47,529.39a1.5,1.5,0,0,1-1.48-1.3c-.28-2-.46-4.08-.55-6.12a1.5,1.5,0,0,1,3-.12c.08,1.94.25,3.9.52,5.83a1.5,1.5,0,0,1-1.28,1.69Z"
-                              style="fill:#145566"/>
+                              style="fill:#145566"></path>
                         <path d="M828.62,511.49l-.23,0a1.51,1.51,0,0,1-1.26-1.71A70.54,70.54,0,0,1,830,497.91a1.5,1.5,0,0,1,2.85,1,66.69,66.69,0,0,0-2.77,11.34A1.5,1.5,0,0,1,828.62,511.49Zm7.5-22.59a1.44,1.44,0,0,1-.69-.17,1.5,1.5,0,0,1-.64-2,94.45,94.45,0,0,1,6.27-10.4,1.5,1.5,0,1,1,2.46,1.71,93.13,93.13,0,0,0-6.07,10.07A1.5,1.5,0,0,1,836.12,488.9Zm13.52-19.66a1.46,1.46,0,0,1-1-.37,1.49,1.49,0,0,1-.15-2.11c2.6-3,5.42-5.91,8.4-8.71a1.5,1.5,0,1,1,2.06,2.18c-2.91,2.74-5.67,5.6-8.2,8.5A1.48,1.48,0,0,1,849.64,469.24ZM867,452.84a1.47,1.47,0,0,1-1.18-.57,1.51,1.51,0,0,1,.25-2.11c3.14-2.46,6.45-4.84,9.82-7.05a1.5,1.5,0,1,1,1.64,2.51c-3.3,2.17-6.53,4.49-9.61,6.9A1.45,1.45,0,0,1,867,452.84Zm20-13.11a1.51,1.51,0,0,1-1.32-.78,1.49,1.49,0,0,1,.6-2c3.48-1.92,7.09-3.76,10.72-5.49a1.51,1.51,0,0,1,2,.72,1.49,1.49,0,0,1-.71,2c-3.58,1.7-7.14,3.52-10.57,5.41A1.57,1.57,0,0,1,887,439.73Zm21.59-10.25a1.5,1.5,0,0,1-.56-2.89c3.66-1.49,7.46-2.91,11.27-4.22a1.5,1.5,0,1,1,1,2.84c-3.77,1.29-7.51,2.69-11.12,4.16A1.65,1.65,0,0,1,908.58,429.48Zm22.6-7.78a1.5,1.5,0,0,1-.41-2.95c3.79-1.09,7.7-2.11,11.63-3a1.5,1.5,0,1,1,.69,2.92c-3.88.92-7.75,1.93-11.5,3A1.4,1.4,0,0,1,931.18,421.7Zm191.25-4.26h-1.21a1.5,1.5,0,0,1-1.49-1.51,1.47,1.47,0,0,1,1.51-1.49h1.19c3.71,0,7.29-.13,10.63-.39a1.5,1.5,0,0,1,.23,3C1129.87,417.31,1126.22,417.44,1122.43,417.44Zm-13.15-.46h-.1c-3.57-.23-7.48-.56-12-1a1.5,1.5,0,1,1,.29-3c4.45.44,8.33.77,11.87,1a1.5,1.5,0,0,1-.1,3Zm-154.84-.79a1.5,1.5,0,0,1-.28-3c3.86-.74,7.85-1.4,11.85-2a1.5,1.5,0,0,1,.44,3c-4,.58-7.91,1.24-11.73,2Zm190.58-.71a1.5,1.5,0,0,1-.28-3,83.64,83.64,0,0,0,11.34-3,1.5,1.5,0,1,1,1,2.84,86.35,86.35,0,0,1-11.75,3.12A1.43,1.43,0,0,1,1145,415.48Zm-59.55-.76h-.16l-3.56-.38q-4.15-.45-8.32-.86a1.5,1.5,0,0,1,.29-3c2.79.27,5.58.55,8.35.85l3.56.39a1.5,1.5,0,0,1-.16,3Zm-107.38-2a1.5,1.5,0,0,1-.16-3c3.9-.42,7.92-.78,12-1.08a1.5,1.5,0,1,1,.21,3c-4,.3-8,.66-11.85,1.07Zm83.58-.28h-.12c-4-.32-8-.61-11.9-.84a1.5,1.5,0,0,1,.18-3c3.9.24,7.92.52,12,.85a1.5,1.5,0,0,1-.12,3ZM1037.8,411h-.06c-4-.15-8-.26-11.92-.32a1.5,1.5,0,0,1,0-3c3.91.06,8,.17,12,.33a1.5,1.5,0,0,1,0,3Zm-35.87,0a1.5,1.5,0,0,1-.06-3c3.92-.16,8-.26,12-.31a1.52,1.52,0,0,1,1.51,1.48,1.5,1.5,0,0,1-1.48,1.52c-4,.05-8,.15-11.91.31Zm165.58-3.33a1.49,1.49,0,0,1-1.32-.79,1.5,1.5,0,0,1,.61-2,76.17,76.17,0,0,0,9.85-6.34,1.5,1.5,0,0,1,1.81,2.39,77.66,77.66,0,0,1-10.24,6.59A1.39,1.39,0,0,1,1167.51,407.62Zm19-14.32a1.51,1.51,0,0,1-1.06-2.57,100.3,100.3,0,0,0,7.82-8.8,1.5,1.5,0,1,1,2.35,1.87,106.12,106.12,0,0,1-8.05,9.06A1.51,1.51,0,0,1,1186.55,393.3Zm14.88-18.67a1.42,1.42,0,0,1-.81-.24,1.49,1.49,0,0,1-.45-2.07c2.06-3.21,4.07-6.65,6-10.21a1.5,1.5,0,1,1,2.65,1.4c-1.93,3.64-4,7.15-6.09,10.43A1.49,1.49,0,0,1,1201.43,374.63Z"
                               style="fill:#145566"/>
                         <path d="M1212.7,353.49a1.41,1.41,0,0,1-.6-.13,1.5,1.5,0,0,1-.77-2c.79-1.78,1.56-3.63,2.31-5.48a1.5,1.5,0,1,1,2.78,1.12c-.76,1.88-1.55,3.76-2.35,5.57A1.49,1.49,0,0,1,1212.7,353.49Z"
