--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -48,7 +48,7 @@
                                         <div class="status w-25"><span>{{ p.project_form.required_budget }}</span> ریال
                                         </div>
                                         <div class="show w-25">
-                                            <button class="default-btn show-btn preview-project" id="{{ p.id }}" data-url="{% url 'expert:show_project' %}">
+                                            <button class="default-btn preview-project" id="{{ p.id }}" data-url="{% url 'expert:show_project' %}">
                                                 مشاهده
                                             </button>
                                         </div>
