select_techniques dialog is ready for you Mr.Sepehr

--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -119,4 +119,5 @@
 {% block script %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+{#    <script src="{% static 'js/inputTags.jquery.min.js' %}" type="text/javascript"></script>#}
 {% endblock %}
