--- a/expert/templates/expert/layouts/select_techniques.html
+++ b/expert/templates/expert/layouts/select_techniques.html
@@ -20,10 +20,13 @@
                     <div class="section">
                         <div id="fancy-tree"></div>
                     </div>
-{#                    <div class="">#}
-{#                        <label for="add-new-technique">تکنیک جدید</label>#}
-{#                        <input type="text" class="w-100" name="" id="add-new-technique">#}
-{#                    </div>#}
+                    <div dir="rtl" class="sub-header">
+                        در صورتی که تکنیک مورد نطر خود را در لیست بالا نیافتید، آن را اینجا وارد کنید و کلید Enter را
+                        فشار دهید.
+                    </div>
+                    <div style="position: relative">
+                        <input  style="margin: 0" type="text" class="w-100" name="" id="add-new-technique" placeholder="نام تکنیک">
+                    </div>
                 </div>
                 <div class="col-4 text-right">
                     <span class="section-title">تکنیک های انتخاب شده</span>
