--- a/expert/templates/expert/layouts/select_techniques.html
+++ b/expert/templates/expert/layouts/select_techniques.html
@@ -4,8 +4,7 @@
         <div class="close"></div>
         <div class="card-head">انتخاب تکنیک</div>
         <div class="container">
-            <form method="post" enctype="multipart/form-data" class="ajax-select-techniques"
-                  data-url="">
+            <form method="post" enctype="multipart/form-data" class="ajax-select-techniques" data-url="{% url 'expert:accept_project' %}">
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-lg-12 text-right">
@@ -42,7 +41,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <button class="save-btn" id="accept-techniques" type="button">
+                    <button class="save-btn" id="accept-techniques" type="submit">
                         ثبت و ارسال درخواست
                     </button>
                 </div>
