--- a/expert/static/expert/css/comments.css
+++ b/expert/static/expert/css/comments.css
@@ -33,7 +33,7 @@
   margin: 10px auto;
 }
 .my-comment{
-  padding-right: 70px;
+  /*padding-right: 70px;*/
 }
 .my-comment > .comment-profile {
   position: absolute;
@@ -41,30 +41,30 @@
   bottom: 0;
 }
 .my-comment > .comment-body {
-  border-bottom-right-radius: 0;
+
 }
-.my-comment > .comment-body:after{
-  content: '';
-  position: absolute;
-  bottom: 0;
-  right: -10px;
-  height: 10px;
-  width: 10px;
-  border-bottom-left-radius: 1.25em;
-  background-color: #f8fdf7;
-  border-left: 1px solid #bdbdbd;
-  border-bottom: 1px solid #bdbdbd;
-}
-.my-comment > .comment-body:before{
-  content: '';
-  position:absolute;
-  bottom: -1px;
-  right: -10px;
-  height: 10px;
-  width: 10px;
-  background-color: #f8fdf7;
-  border-bottom: 1px solid #bdbdbd;
-}
+/*.my-comment > .comment-body:after{*/
+/*  content: '';*/
+/*  position: absolute;*/
+/*  bottom: 0;*/
+/*  right: -10px;*/
+/*  height: 10px;*/
+/*  width: 10px;*/
+/*  border-bottom-left-radius: 1.25em;*/
+/*  background-color: #f8fdf7;*/
+/*  border-left: 1px solid #bdbdbd;*/
+/*  border-bottom: 1px solid #bdbdbd;*/
+/*}*/
+/*.my-comment > .comment-body:before{*/
+/*  content: '';*/
+/*  position:absolute;*/
+/*  bottom: -1px;*/
+/*  right: -10px;*/
+/*  height: 10px;*/
+/*  width: 10px;*/
+/*  background-color: #f8fdf7;*/
+/*  border-bottom: 1px solid #bdbdbd;*/
+/*}*/
 .fa-paperclip, .fa-pen, .fa-trash-alt, .fa-reply, .fa-smile{
   border: 1px solid transparent;
   padding: 6px;
