--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -5,17 +5,24 @@
         <div class="close"></div>
         <div class="card-head"></div>
         <div class="container">
-            <div class="row mbottom-lg-30">
-                <div class="col-lg-6 techniques"></div>
-                <div class="col-lg-6">
+            <div class="row">
+                <div class="col-lg-12 techniques"></div>
+            </div>
+            <div class="row">
+                <div class="col-6"></div>
+                <div class="col-6 text-left">
                     <div class="row">
-                        <div class="establish-time col-6">
-                            <div class="time-head">زمان ثبت</div>
-                            <div class="time-body"></div>
+                        <div class="col-6">
+                            <div class="establish-time">
+                                <div class="time-head">ثبت</div>
+                                <div class="time-body">تاریخ ثبت</div>
+                            </div>
                         </div>
-                        <div class="time-left col-6">
-                            <div class="time-head">مهلت انجام</div>
-                            <div class="time-body"></div>
+                        <div class="col-6">
+                            <div class="time-left">
+                                <div class="time-head">مهلت</div>
+                                <div class="time-body">مهلت</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -23,25 +30,33 @@
             <div class="row mbottom-lg-25">
                 <div class="col-lg-12 text-right">
                     <span class="section-title">اطلاعات پروژه</span>
+                    <div class="project-info-tabs">
+                        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+                             aria-orientation="vertical">
+                            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
+                               role="tab" aria-controls="v-pills-home"
+                               aria-selected="true">
+                                شاخص ها
+                            </a>
+                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
+                               role="tab" aria-controls="v-pills-profile"
+                               aria-selected="false">
+                                راهکار ها
+                            </a>
+                            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
+                               role="tab" aria-controls="v-pills-messages"
+                               aria-selected="false">
+                                منابع مورد نیاز
+                            </a>
+                            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
+                               role="tab" aria-controls="v-pills-settings"
+                               aria-selected="false">
+                                قوانین
+                            </a>
+                        </div>
+                    </div>
                     <div class="section">
                         <div class="project-info-innerDiv">
-                            <div class="project-info-tabs">
-                                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
-                                     aria-orientation="vertical">
-                                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
-                                       role="tab" aria-controls="v-pills-home"
-                                       aria-selected="true"></a>
-                                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
-                                       role="tab" aria-controls="v-pills-profile"
-                                       aria-selected="false"></a>
-                                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
-                                       role="tab" aria-controls="v-pills-messages"
-                                       aria-selected="false"></a>
-                                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
-                                       role="tab" aria-controls="v-pills-settings"
-                                       aria-selected="false"></a>
-                                </div>
-                            </div>
                             <div class="project-info-content">
                                 <div>
                                     <div class="question">
