--- a/expert/templates/expert/layouts/researcher_info_dialog.html
+++ b/expert/templates/expert/layouts/researcher_info_dialog.html
@@ -18,11 +18,6 @@
                                    <div>محل تحصیل: <span id="researcher_university">دانشگاه تهران</span></div>
                                    <div>سال ورود: <span id="researcher_entry_year">1395</span></div>
                                    <div id="researcher_techniques">
-                                       <span class="border-span">برنامه نویس Django </span>
-                                       <span class="border-span">python</span>
-                                       <span class="border-span">برنامه نویس BackEnd</span>
-                                       <span class="border-span">مسلط به Git</span>
-                                       <span class="border-span">مسلط به Finglish</span>
                                    </div>
                                </div>
                            </div>
@@ -121,7 +116,9 @@
                    </div>
                    <div class="row mbottom-lg-25">
                        <div class="col-lg-12 text-right">
-                           {% include 'expert/layouts/comment.html' %}
+                           <div class="status" status="researcher" url="{% url  'expert:researcher_comment' %}">
+                                {% include 'expert/layouts/comment.html' %}
+                           </div>
                        </div>
                    </div>
                </div>
