--- a/industry/static/industry/css/style.css
+++ b/industry/static/industry/css/style.css
@@ -181,38 +181,6 @@ hr {
 
 /* end index.html*/
 /* showProject.html*/
-.establish-time, .time-left {
-    width: fit-content;
-    position: absolute;
-    top: -20px;
-}
-
-.establish-time {
-    left: 180px;
-}
-
-.time-left {
-    left: 50px;
-}
-
-.establish-time > .time-head, .time-left > .time-head {
-    background-color: #3CCD1C;
-    color: #fff;
-    border-top-left-radius: 0.25em;
-    border-top-right-radius: 0.25em;
-    border: 1px solid #bdbdbd;
-    border-bottom: none;
-    padding: 0 5px;
-    text-align: center;
-}
-
-.establish-time > .time-body, .time-left > .time-body {
-    background-color: #F8FDF7;
-    color: #707070;
-    border: 1px solid #bdbdbd;
-    padding: 0 5px;
-    text-align: center;
-}
 
 .custom-border-title {
     border: 1px solid #bdbdbd;
@@ -245,72 +213,48 @@ span.title-back {
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.16), 0 0 5px 0 #ffffff00;
 }
 
-.project-info-innerDiv {
-    padding-right: 44px;
-    position: relative;
-}
 
-.project-info-tabs {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-top-right-radius: 0.25em;
-    border-bottom-right-radius: 0.25em;
-    padding: 2px;
-    width: 43px;
-}
+/*.nav-pills > .nav-link {*/
+/*    position: relative;*/
+/*    background-color: #f8fdf7;*/
+/*    color: #fff;*/
+/*    padding: 5px 2px;*/
+/*    margin: 1px 2px 1px 0;*/
+/*    border-radius: 0 0.25em 0.25em 0;*/
+/*    width: 40px;*/
+/*    height: 90px;*/
+/*}*/
 
-.project-info-content {
-    width: 100%;
-    height: 100%;
-    min-height: 370px;
-    padding: 5px;
-    position: relative;
-    border-right: 1px solid #bdbdbd;
+/*.nav-pills > .nav-link.active, .nav-pills > .nav-link:hover {*/
+/*    background-color: #3CCD1C;*/
+/*    color: #fff !important;*/
+/*    cursor: pointer;*/
+/*}*/
 
-}
+/*.nav-pills > .nav-link::after {*/
+/*    content: 'شاخص ها';*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    width: max-content;*/
+/*    transform: translate(-50%, -50%) rotate(90deg);*/
+/*}*/
 
-.nav-pills > .nav-link {
-    position: relative;
-    background-color: #f8fdf7;
-    color: #fff;
-    padding: 5px 2px;
-    margin: 1px 2px 1px 0;
-    border-radius: 0 0.25em 0.25em 0;
-    width: 40px;
-    height: 90px;
-}
+/*.nav-pills > .nav-link:first-child::after {*/
+/*    content: 'شاخص ها';*/
+/*}*/
 
-.nav-pills > .nav-link.active, .nav-pills > .nav-link:hover {
-    background-color: #3CCD1C;
-    color: #fff !important;
-    cursor: pointer;
-}
+/*.nav-pills > .nav-link:nth-child(2)::after {*/
+/*    content: 'راهکارها';*/
+/*}*/
 
-.nav-pills > .nav-link::after {
-    content: 'شاخص ها';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: max-content;
-    transform: translate(-50%, -50%) rotate(90deg);
-}
+/*.nav-pills > .nav-link:nth-child(3)::after {*/
+/*    content: 'منابع مورد نیاز';*/
+/*}*/
 
-.nav-pills > .nav-link:first-child::after {
-    content: 'شاخص ها';
-}
-
-.nav-pills > .nav-link:nth-child(2)::after {
-    content: 'راهکارها';
-}
-
-.nav-pills > .nav-link:nth-child(3)::after {
-    content: 'منابع مورد نیاز';
-}
-
-.nav-pills > .nav-link:nth-child(4)::after {
-    content: 'قوانین';
-}
+/*.nav-pills > .nav-link:nth-child(4)::after {*/
+/*    content: 'قوانین';*/
+/*}*/
 
 .question-mark {
     height: 100%;
