--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -59,11 +59,11 @@
 
         <h5>{% block name %}{{ request.user.researcheruser.researcherprofile }}{% endblock %}</h5>
         <h6>پژوهشگر</h6>
-        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:0 }}</span>/100</p>
+        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ request.user.researcheruser.points|default:0 }}</span>/10</p>
         <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0"
-                 aria-valuemax="100" style="width: 70px">
-                <span class="sr-only">{{ score|default:0 }}% completed</span>
+            <div class="progress-bar" role="progressbar" aria-valuenow="5.7" aria-valuemin="0"
+                 aria-valuemax="10" style="width: {{ request.user.researcheruser.score|default:0 }}px">
+                <!-- <span class="sr-only">57% completed</span> -->
             </div>
         </div>
         <div class="hr"></div>
