--- a/researcher/templates/researcher/layouts/projectList.html
+++ b/researcher/templates/researcher/layouts/projectList.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 </div>
-    {% for com in comments %}
+    <!-- {% for com in comments %}
         <div class="your-comment">
                 <div class="comment-body">
                     <span class="comment-tools">
@@ -44,6 +44,6 @@
                     </span>
                 </div>
             </div>
-    {% endfor %}
+    {% endfor %} -->
     </div>
 </div>
