--- a/researcher/templates/researcher/layouts/showProject.html
+++ b/researcher/templates/researcher/layouts/showProject.html
@@ -68,32 +68,36 @@
                     </div>
                 </div>
             </div>
-            {#            <form method="POST" url="{% url 'researcher:apply_project' %}" class="apply_Project">#}
-            {#                {% csrf_token %}#}
-            {#                <div class="row">#}
-            {#                    <input type="text" id="apply_project_id" name="id" hidden>#}
-            {#                    <div class="col-lg-6">#}
-            {#                        حداقل ساعت: <input type="text" name="least_hours" id="least_hours">#}
-            {#                    </div>#}
-            {#                    <div class="col-lg-6">#}
-            {#                        حداکثر ساعت: <input type="text" name="most_hours" id="most_hours">#}
-            {#                    </div>#}
-            {#                </div>#}
-            {#                <div class="row">#}
-            {#                    <div class="col-lg-12">#}
-            {#                        <button class="w-100 accept-btn btn"></button>#}
-            {#                    </div>#}
-            {#            </form>#}
+            <div class="apply">
+                <form method="POST" url="{% url 'researcher:apply_project' %}" class="apply_Project">
+                    {% csrf_token %}
+                    <div class="row">
+                        <input type="text" id="apply_project_id" name="id" hidden>
+                        <div class="col-lg-6">
+                            حداقل ساعت: <input type="text" name="least_hours" id="least_hours">
+                        </div>
+                        <div class="col-lg-6">
+                            حداکثر ساعت: <input type="text" name="most_hours" id="most_hours">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <button type="submit" class="w-100 accept-btn btn">ارسال درخواست انجام پروژه</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
             <div class="row">
                 <div class="col-lg-12 text-right">
                     {% include 'researcher/layouts/comment.html' %}
                 </div>
             </div>
-            <div class="card-footer">
-                <button class="save-btn confirm_project" id="accept-project">
-                    ارسال درخواست انجام پروژه
-                </button>
-            </div>
+            {# <div class="card-footer">#}
+            {#    <button class="save-btn confirm_project" id="accept-project">#}
+            {#        ارسال درخواست انجام پروژه#}
+            {#    </button>#}
+            {#</div> -->#}
         </div>
     </div>
 </div>
