--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -65,10 +65,10 @@
         {% endif %}
         <h5>{% block name %}{% endblock %}</h5>
         <h6>استاد</h6>
-        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:3 }}</span>/10</p>
+        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ request.user.expertuser.expert_point|default:3 }}</span>/10</p>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0"
-                 aria-valuemax="100" style="width: 70px">
+                 aria-valuemax="100" style="width: {{request.user.expertuser.score}}px">
                 <span class="sr-only">{{ score|default:0 }}% completed</span>
             </div>
         </div>
@@ -83,7 +83,7 @@
                     </div>
                 </li>
             </a>
-            {% url 'expert:messages' as messages_url %}
+            <!-- {% url 'expert:messages' as messages_url %}
             <a href="{{ messages_url }}">
                 <li class="list-group-item text-right {% if request.get_full_path == messages_url %}active{% endif %}">
                     <div>
@@ -92,7 +92,7 @@
                     </div>
 
                 </li>
-            </a>
+            </a> -->
             {% url 'expert:questions' as questions_url %}
             <a href="{{ questions_url }}">
                 <li class="list-group-item text-right {% if request.get_full_path == questions_url %}active{% endif %}">
