--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -58,11 +58,11 @@
                     alt="profile" class="profile" width="150px" height="150px">
         <h5>{% block name %}{% endblock %}</h5>
         <h6>صنعت</h6>
-        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:0 }}</span>/100</p>
+        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ user.industryuser.industry_points|default:0 }}</span>/100</p>
         <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0"
-                 aria-valuemax="100" style="width: 70px">
-                <span class="sr-only">{{ score|default:0 }}% completed</span>
+            <div class="progress-bar" role="progressbar" aria-valuenow="{{ user.industryuser.score|default:0 }}" aria-valuemin="0"
+                 aria-valuemax="100" style="width: {{user.industryuser.score}} px">
+                <span class="sr-only">{{ user.industryuser.score|default:0 }}% completed</span>
             </div>
         </div>
         <div class="hr"></div>
@@ -76,7 +76,7 @@
                     </div>
                 </li>
             </a>
-            {% url "industry:messages" as messages %}
+            <!-- {% url "industry:messages" as messages %}
             <a href="{{ messages }}">
                 <li class="list-group-item text-right {% if request.get_full_path == messages %}active{% endif %}">
                     <div>
@@ -84,7 +84,7 @@
                         <span class="fas fa-envelope"></span>
                     </div>
                 </li>
-            </a>
+            </a> -->
             {% url "industry:newProject" as newProject %}
             <a href='{{ newProject }}'>
                 <li class="list-group-item text-right {% if request.get_full_path == newProject %}active{% endif %}">
@@ -95,14 +95,14 @@
                 </li>
             </a>
             {#            TODO#}
-            <li class="list-group-item text-right">
+            <!-- <li class="list-group-item text-right">
                 <a href="#">
                     <div>
                         <span>درخواست ها</span>
                         <span class="fas fa-sticky-note"></span>
                     </div>
                 </a>
-            </li>
+            </li> -->
             {% url 'industry:userInfo' as userInfo %}
             <li class="list-group-item text-right {% if request.get_full_path == userInfo %}active{% endif %}">
                 <a href="{{ userInfo }}">
