add button to email templates

--- a/templates/registration/email_template.html
+++ b/templates/registration/email_template.html
@@ -65,6 +65,11 @@
     </tr>
     <tr>
         <td style="padding-bottom: 30px;direction: rtl; color: #484848;font-family: tahoma;line-height: 25px;">
+            <a href="{{ message }}" style="background-color: #bdbdbd;color: white;padding: 5px 10px;border-radius: 0.25em;">{{ proper_text }}</a>
+        </td>
+    </tr>
+    <tr>
+        <td style="padding-bottom: 30px;direction: rtl; color: #484848;font-family: tahoma;line-height: 25px;">
             {{ message }}
         </td>
     </tr>
