--- a/templates/404Template.html
+++ b/templates/404Template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>{% block page %}{% endblock %}</title>
+    <title>صفحه پیدا نشد!</title>
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -12,19 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/style1.css' %}">
 </head>
 <body>
-{% include 'registration/loading.html' %}
-<div class="card registration">
-    <img class="registration-card-icon" src="{% static 'img/logo.png' %}" alt="ChamranLogo">
-    <p class="ChamranTeam">
-        {% block page %}{% endblock %}
-    </p>
-    
-    {% if user.is_authenticated %}
-        <p>{{user.username}}</p>
-    {% endif %}
-        
-    {% block content %}{% endblock content %}
-</div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -33,3 +21,4 @@
 </body>
 </html>
 
+ml>
