--- a/templates/registration/recover_pass.html
+++ b/templates/registration/recover_pass.html
@@ -1,15 +1,19 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
+{% block page_title %}
+    بازیابی رمز عبور
+{% endblock %}
 {% block page %}
     بازیابی رمز عبور
 {% endblock %}
 {% block content %}
-    <form method="post" action="" novalidate class="recover-pass">
+    <form method="post" class="recover-pass" novalidate data-url="{% url 'chamran:recovery_ajax' %}">
         {% csrf_token %}
-            <div class="email">
+            <div class="email" style="display: block">
                 <label for="email">پست الکترونیکی</label>
-                {{ form.username|attr:"id:email" }}
-                {{ form.username.errors }}
+                <input type="email" name="username" id="email">
+                <!-- {{ form.username|attr:"id:email" }}
+                {{ form.username.errors }} -->
                 <i class="fas fa-user-alt fa-lg"></i>
             </div>
         <button type="submit" name="sign_up" class="Enter-btn">بازیابی</button>
