little bug in research question attachment fixed!

--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="textarea-text">
-                            <span class="title"><a href="{{ attachment.url }}"></a>متن سوال</span>
+                            <span class="title">متن سوال</span>
                             <div class="body">
                                 {{ question }}
                             </div>
